# advent_of_code

2024/: .gitignore  advent-of-code.cabal  aoc-hs.sh  aoc.sh  fourmolu.yaml  hie.yaml  x2024.cabal
2024/day_01/: solution.hs
2024/day_02/: solution.hs
2024/day_03/: solution.hs
2024/day_04/: solution.hs
2024/day_05/: solution.hs
2024/day_06/: solution.hs
2024/day_07/: solution.hs
2024/day_08/: solution.hs
2024/day_09/: solution.hs
2024/day_10/: solution.hs
2024/day_11/: solution.hs
2024/day_12/: solution.hs
2024/day_13/: solution.hs
2024/day_14/: solution.hs
2024/day_15/: data  solution.hs
2024/day_16/: solution.hs
2024/day_17/: solution.hs
2024/day_18/: solution.hs
2024/day_19/: solution.hs
2024/day_20/: solution.hs
2024/day_21/: data  solution.hs
2024/day_22/: solution.hs
2024/day_23/: solution.hs
2024/day_24/: solution.hs
2024_revamp/: .gitignore  LICENSE  advent-of-code.cabal
2024_revamp/solutions/: day-1.hs
