cabal-version:      3.4
name:               x2024
version:            0.1.0.0
synopsis:           Advent of code - 2024, solutions in haskell
-- description:
homepage:
    https://github.com/Lofty-Brambles/advent_of_code/blob/main/2024

license:            MIT
license-file:       LICENSE
author:             Lofty
-- copyright:
build-type:         Simple
extra-doc-files:    README.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

common deps
    default-extensions:
        TypeApplications
      , TupleSections
      , NumericUnderscores
      , NamedFieldPuns
    build-depends:
        base >=4.7 && <5
      , regex-tdfa ^>= 1.3.2
      , containers
      , parallel
      , multiset

-- after this aoc.sh will handle the additions, so add anything necessary before it
executable day_01
    import:           deps
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   day_01
    main-is:          solution.hs
    default-language: Haskell2010

executable day_02
    import:           deps
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   day_02
    main-is:          solution.hs
    default-language: Haskell2010

executable day_03
    import:           deps
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   day_03
    main-is:          solution.hs
    default-language: Haskell2010

executable day_04
    import:           deps
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   day_04
    main-is:          solution.hs
    default-language: Haskell2010

executable day_05
    import:           deps
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   day_05
    main-is:          solution.hs
    default-language: Haskell2010

executable day_06
    import:           deps
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   day_06
    main-is:          solution.hs
    default-language: Haskell2010

executable day_07
    import:           deps
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   day_07
    main-is:          solution.hs
    default-language: Haskell2010

executable day_08
    import:           deps
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   day_08
    main-is:          solution.hs
    default-language: Haskell2010

executable day_09
    import:           deps
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   day_09
    main-is:          solution.hs
    default-language: Haskell2010

executable day_10
    import:           deps
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   day_10
    main-is:          solution.hs
    default-language: Haskell2010

executable day_11
    import:           deps
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   day_11
    main-is:          solution.hs
    default-language: Haskell2010

executable day_12
    import:           deps
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   day_12
    main-is:          solution.hs
    default-language: Haskell2010

executable day_13
    import:           deps
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   day_13
    main-is:          solution.hs
    default-language: Haskell2010

executable day_14
    import:           deps
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   day_14
    main-is:          solution.hs
    default-language: Haskell2010

executable day_15
    import:           deps
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   day_15
    main-is:          solution.hs
    default-language: Haskell2010

executable day_16
    import:           deps
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   day_16
    main-is:          solution.hs
    default-language: Haskell2010

executable day_17
    import:           deps
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   day_17
    main-is:          solution.hs
    default-language: Haskell2010

executable day_18
    import:           deps
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   day_18
    main-is:          solution.hs
    default-language: Haskell2010

executable day_19
    import:           deps
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   day_19
    main-is:          solution.hs
    default-language: Haskell2010

executable day_20
    import:           deps
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   day_20
    main-is:          solution.hs
    default-language: Haskell2010

executable day_21
    import:           deps
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   day_21
    main-is:          solution.hs
    default-language: Haskell2010

executable day_22
    import:           deps
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   day_22
    main-is:          solution.hs
    default-language: Haskell2010

executable day_23
    import:           deps
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   day_23
    main-is:          solution.hs
    default-language: Haskell2010

